--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
+      <li><a href="#about">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -66,19 +66,21 @@
   <!-- ============================= -->
   <!-- 🏢 About Section -->
   <!-- ============================= -->
-  <section id="about" class="about section">
-    <div class="container">
-      <h2>About Us</h2>
-      <p>
-        Your vision inspires us—every project starts with your ambition, and together, we transform ideas into reality. At our machining shop, we don&rsquo;t just deliver precision and quality; we become partners in your progress, fueling innovation and building pathways to your success.
-
-        We thrive on challenge and embrace change, investing in the latest technology and our own growth so we can empower yours. Our team is driven by curiosity and purpose,  always seeking new ways to solve problems and elevate your experience.
-
-        Trust is at the heart of everything we do. We celebrate your milestones, share your challenges, and commit to being there—reliably, consistently, passionately—every step of your journey.
-      </p>
-      <p>
-        Let&rsquo;s build more than parts. Let&rsquo;s craft a future—together.
-      </p>
+  <section id="about" class="about-section">
+    <div class="about-content">
+        <img src="resources/image/About us.jpg" alt="About Us Image"/>
+        <div class="about-text">
+          <h2>About Us</h2>
+          <p>
+            At Shree Hari Engineers, your vision inspires us—every project starts with your ambition, and together, we transform ideas into reality. At our machining shop, we don&rsquo;t just deliver precision and quality; we become partners in your progress, fueling innovation and building pathways to your success.
+            We thrive on challenge and embrace change, investing in the latest technology and our own growth so we can empower yours. Our team is driven by curiosity and purpose,  always seeking new ways to solve problems and elevate your experience.
+            Trust is at the heart of everything we do. We celebrate your milestones, share your challenges, and commit to being there—reliably, consistently, passionately—every step of your journey.
+          </p>
+          <p>
+            Let&rsquo;s build more than parts. Let&rsquo;s craft a future—together.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -90,16 +92,25 @@
       <h2>Our Services</h2>
       <div class="service-cards">
         <article class="card">
-          <h3>CNC Machining</h3>
-          <p>High-precision CNC machining using advanced HMC machines for all material types.</p>
+          <img src="resources/image/cnc-machine.jpeg" alt="" class="card-image">
+          <div class="card-content">
+            <h3 class="card-title">CNC Machining</h3>
+            <p class="card-description">High-precision CNC machining using advanced HMC machines for all material types.</p>
+          </div>
         </article>
         <article class="card">
-          <h3>Prototyping</h3>
-          <p>Fast and accurate prototypes to test your product before full-scale production.</p>
+          <img src="resources/image/prototype.png" alt="" class="card-image">
+          <div class="card-content">
+            <h3 class="card-title">Prototyping</h3>
+            <p class="card-description">Fast and accurate prototypes to test your product before full-scale production.</p>
+          </div>
         </article>
         <article class="card">
-          <h3>Batch Production</h3>
-          <p>Small to large-scale production runs with consistent quality and timely delivery.</p>
+          <img src="resources/image/batch-production.jpg" alt="" class="card-image">
+          <div class="card-content">
+            <h3 class="card-title">Batch Production</h3>
+            <p class="card-description">Small to large-scale production runs with consistent quality and timely delivery.</p>
+          </div>
         </article>
       </div>
     </div>
