changed our services section

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <!-- ✅ Basic Meta Tags -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Your Company Name - Expert CNC Machining, precision manufacturing, and engineering services." />
+  <meta name="card-content" content="Your Company Name - Expert CNC Machining, precision manufacturing, and engineering services." />
   <meta name="keywords" content="CNC Machining, Precision Engineering, Manufacturing, HMC Machine, Metal Works" />
   <meta name="author" content="Your Company Name" />
 
   <!-- ✅ SEO & Social Sharing -->
   <title>Shree Hari Engineers</title>
   <meta property="og:title" content="Shree Hari Engineers | Precision CNC Machining" />
-  <meta property="og:description" content="High-quality CNC machining and manufacturing services with precision and reliability." />
+  <meta property="og:card-content" content="High-quality CNC machining and manufacturing services with precision and reliability." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.yourcompany.com" />
   <meta property="og:image" content="https://www.yourcompany.com/assets/og-image.jpg" />
@@ -41,9 +41,9 @@
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
       <li><a href="#about">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -92,23 +92,26 @@
       <h2>Our Services</h2>
       <div class="service-cards">
         <article class="card">
-          <img src="resources/image/cnc-machine.jpeg" alt="" class="card-image">
+          <img src="resources/image/cnc-machine.jpeg" alt="machining Service" class="card-image">
+          <div class="overlay"></div>
+          <h3 class="card-title">CNC Machining</h3>
           <div class="card-content">
-            <h3 class="card-title">CNC Machining</h3>
-            <p class="card-description">High-precision CNC machining using advanced HMC machines for all material types.</p>
+            <p class="card-description">High-precision CNC machining using advanced HMC machines for all material types.</p>   
           </div>
         </article>
         <article class="card">
-          <img src="resources/image/prototype.png" alt="" class="card-image">
+          <img src="resources/image/prototype.png" alt="Prototyping Service" class="card-image">
+          <div class="overlay"></div>
+          <h3 class="card-title">Prototyping</h3>
           <div class="card-content">
-            <h3 class="card-title">Prototyping</h3>
-            <p class="card-description">Fast and accurate prototypes to test your product before full-scale production.</p>
+            <p class="card-description">Fast and accurate prototypes to test your product before full-scale production.</p> 
           </div>
         </article>
         <article class="card">
-          <img src="resources/image/batch-production.jpg" alt="" class="card-image">
+          <img src="resources/image/batch-production.jpg" alt="Batch Production Service" class="card-image">
+          <div class="overlay"></div>
+          <h3 class="card-title">Batch Production</h3>
           <div class="card-content">
-            <h3 class="card-title">Batch Production</h3>
             <p class="card-description">Small to large-scale production runs with consistent quality and timely delivery.</p>
           </div>
         </article>
