adding machined parts

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
     <div class="container">
       <h2>Our Work</h2>
       <div class="project-gallery">
-        <img src="assets/project1.jpg" alt="Machined Part 1" />
-        <img src="assets/project2.jpg" alt="Machined Part 2" />
-        <img src="assets/project3.jpg" alt="Machined Part 3" />
+        <img src="resources/image/part1.png" alt="Machined Part 1" />
+        <img src="resources/image/part2.png" alt="Machined Part 2" />
+        <img src="resources/image/part3.png" alt="Machined Part 3" />
       </div>
     </div>
   </section>
