changes in our services and about us section

--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
         <source src="resources/videos/main-video.mp4" type="video/mp4" />
       </video>
       <div class="hero-content">
+        <div class="badge"><img src="resources/image/favicon-trust.png" alt="trust-logo">15+ years of Excellence</div>
         <h1>Precision you can feel. Quality you can trust.</h1>
         <p>Delivering reliability and accuracy through advanced HMC machinery and expert craftsmanship.</p>
-        <a href="contact.html" class="btn-primary">Get a Quote</a>
+        <a href="contact.html" class="btn-primary">Request Quote</a>
+        <a href="#services" class="btn-secondary">Our Services</a>
+        <div class="badges-container">
+          <div class="badge-card"><img src="resources/image/favicon-badge.png" alt=""><p>15+</p><p>years of experience
+          </p>
+        </div>
+          <div class="badge-card">
+            <img src="resources/image/favicon-project.png" alt=""><p>2500+</p><p>projects completed</p></div>
+          <div class="badge-card"><img src="resources/image/favicon-trust.png" alt=""><p>ISO</p><p>Certified Quality</p></div>
+        </div>
       </div> 
     </div>
   </section> 
@@ -70,7 +80,8 @@
     <div class="about-content">
         <img src="resources/image/About us.jpg" alt="About Us Image"/>
         <div class="about-text">
-          <h2>About Us</h2>
+          <div class="badge">About Us</div>
+          <h2>Delivering Excellence in<br><span class="highlight-text">Precision Machining</span></h2>
           <p>
             At Shree Hari Engineers, your vision inspires us—every project starts with your ambition, and together, we transform ideas into reality. At our machining shop, we don&rsquo;t just deliver precision and quality; we become partners in your progress, fueling innovation and building pathways to your success.
             We thrive on challenge and embrace change, investing in the latest technology and our own growth so we can empower yours. Our team is driven by curiosity and purpose,  always seeking new ways to solve problems and elevate your experience.
@@ -89,31 +100,42 @@
   <!-- ============================= -->
   <section id="services" class="services section">
     <div class="container">
-      <h2>Our Services</h2>
+      <div class="badge">Our Services</div>
+      <h2>Specialized <span class="highlight-text">Machining Services</span></h2>
+      <p class="services-description">We offer comprehensive CNC machining solutions with a focus on HMC technology for complex, high-precision components.</p>
       <div class="service-cards">
         <article class="card">
-          <img src="resources/image/cnc-machine.jpeg" alt="machining Service" class="card-image">
-          <div class="overlay"></div>
-          <h3 class="card-title">CNC Machining</h3>
-          <div class="card-content">
-            <p class="card-description">High-precision CNC machining using advanced HMC machines for all material types.</p>   
-          </div>
+          <img src="resources/image/favicon-hmcmilling.png" alt="HMC Machining" class="card-icon">
+          <h3 class="card-title">HMC Machining</h3>
+          <p class="card-description">Advanced Horizontal Machining Center services for complex multi-sided parts with high precision and efficiency.</p>
+          <ul class="card-features">
+            <li> ±0.001&quot; micron perpendicularity</li>
+            <li>Runout-free concentricity</li>
+            <li>Vertical hole boring</li>
+            <li>Production Precision</li>
+          </ul>
         </article>
         <article class="card">
-          <img src="resources/image/prototype.png" alt="Prototyping Service" class="card-image">
-          <div class="overlay"></div>
+          <img src="resources/image/favicon-prototyping.png" alt="Prototyping" class="card-icon">
           <h3 class="card-title">Prototyping</h3>
-          <div class="card-content">
-            <p class="card-description">Fast and accurate prototypes to test your product before full-scale production.</p> 
-          </div>
+          <p class="card-description">Fast and accurate prototypes to test your product before full-scale production.</p>
+          <ul class="card-features">
+            <li>72-hour turnaround</li>
+            <li>Aluminum, Steel, Stainless</li>
+            <li>Ra 3.2 surface finish</li>
+            <li>1-10 unit runs</li>
+          </ul>
         </article>
         <article class="card">
-          <img src="resources/image/batch-production.jpg" alt="Batch Production Service" class="card-image">
-          <div class="overlay"></div>
-          <h3 class="card-title">Batch Production</h3>
-          <div class="card-content">
-            <p class="card-description">Small to large-scale production runs with consistent quality and timely delivery.</p>
-          </div>
+          <img src="resources/image/favicon-massproduction.png" alt="Batch & Production" class="card-icon">
+          <h3 class="card-title">Batch & Mass Production</h3>
+          <p class="card-description">Small to large-scale production runs with consistent quality and timely delivery.</p>
+          <ul class="card-features">
+            <li>100-1000 unit scaling</li>
+            <li>Consistent ±15 micron</li>
+            <li>Quick lead times</li>
+            <li>Volume efficiency</li>
+          </ul>
         </article>
       </div>
     </div>
