changing images in portfolio section

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
         <!-- Aerospace Card -->
         <article class="portfolio-card" data-category="aerospace">
           <div class="card-image-section">
-            <img src="resources/image/part1.png" alt="Aerospace Component" class="portfolio-image" />
+            <img src="resources/image/Aerospace mounting bracket.png" alt="Aerospace Component" class="portfolio-image" />
           </div>
           <div class="card-content-section">
-            <h3 class="portfolio-card-title">Turbine Mounting Bracket</h3>
+            <h3 class="portfolio-card-title">Aerospace Mounting Bracket</h3>
             <p class="portfolio-card-description">Multi-face machining with critical datums for aerospace assemblies.</p>
             <div class="material-spec">
               <strong>Material:</strong> Ti-6Al-4V &bull; Tolerance: &plusmn;0.001" &bull; Finish: Ra 0.8 &bull; Process: HMC
@@ -188,7 +188,7 @@
         <!-- Automotive Card -->
         <article class="portfolio-card" data-category="automotive">
           <div class="card-image-section">
-            <img src="resources/image/part2.png" alt="Automotive Part" class="portfolio-image" />
+            <img src="resources/image/Transmission Housing.png" alt="Automotive Part" class="portfolio-image" />
           </div>
           <div class="card-content-section">
             <h3 class="portfolio-card-title">Transmission Housing</h3>
@@ -202,7 +202,7 @@
         <!-- Industrial Card -->
         <article class="portfolio-card" data-category="industrial">
           <div class="card-image-section">
-            <img src="resources/image/part3.png" alt="Industrial Component" class="portfolio-image" />
+            <img src="resources/image/Hydraulic Valve Body.png" alt="Industrial Component" class="portfolio-image" />
           </div>
           <div class="card-content-section">
             <h3 class="portfolio-card-title">Hydraulic Valve Body</h3>
@@ -216,7 +216,7 @@
         <!-- Medical Card -->
         <article class="portfolio-card" data-category="medical">
           <div class="card-image-section">
-            <img src="resources/image/part1.png" alt="Medical Device" class="portfolio-image" />
+            <img src="resources/image/Medical Implant Component.png" alt="Medical Device" class="portfolio-image" />
           </div>
           <div class="card-content-section">
             <h3 class="portfolio-card-title">Medical Implant Component</h3>
@@ -244,7 +244,7 @@
         <!-- Energy Card -->
         <article class="portfolio-card" data-category="energy">
           <div class="card-image-section">
-            <img src="resources/image/part3.png" alt="Energy Sector Component" class="portfolio-image" />
+            <img src="resources/image/Pump Impeller.png" alt="Energy Sector Component" class="portfolio-image" />
           </div>
           <div class="card-content-section">
             <h3 class="portfolio-card-title">Pump Impeller</h3>
