adding medical implant image

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <!-- Medical Card -->
         <article class="portfolio-card" data-category="medical">
           <div class="card-image-section">
-            <img src="resources/image/Medical Implant Component.png" alt="Medical Device" class="portfolio-image" />
+            <img src="resources/image/Medical implant.png" alt="Medical Device" class="portfolio-image" />
           </div>
           <div class="card-content-section">
             <h3 class="portfolio-card-title">Medical Implant Component</h3>
